[tool.poetry]
name = "pyduino"
version = "0.1.0"
description = "A light-weight Python library that provides a serial bridge for communicating with Arduino microcontroller boards."
authors = ["Seyed Amir Alavi <seydamir@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/samiralavi/pyduino"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
